# stock_predict

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.gpu  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  GAP_PREDICTION_PROJECT.md  Todo.md
app/: __init__.py  main.py
app/config/: __init__.py  db_connections.py  kafka_connections.py  settings.py
app/handler/: gap_predict_handler.py
app/kafka/: __init__.py  consumer.py  producer.py  schemas.py
app/prediction/: __init__.py  predictor.py
docs/: gpu_retraining_plan.md  retraining_plan.md
models/stacking/: active
models/stacking/v1.26.0130/: report.md
models/stacking/v1.26.0131/: report.md
notebooks/: 01_data_exploration.ipynb  02_eda.ipynb  04_modeling_classifier.ipynb  05_modeling_regressor.ipynb  06_modeling_stacking.ipynb  07_backtesting.ipynb  debug_cell.txt  debug_model_2_1.py
retraining/: __init__.py  backtester.py  champion_challenger.py  config.py  data_pipeline.py  database.py  handler.py  kafka_client.py  main.py  model_registry_service.py  report.py  schemas.py  seed_registry.py  test_existing_model.py  test_local.py  trainer_wrapper.py
src/backtesting/: metric.py  simulator.py
src/data/: data_loader.py  db_connector.py  models.py  preprocessor.py
src/features/: __init__.py  market_features.py  technical_features.py
src/models/: __init__.py  base.py  classifier.py  regressor_down.py  regressor_high.py  regressor_up.py  storage.py  trainer.py
src/prediction/: __init__.py  predictor.py
