[tool.poetry]
name = "price-predict"
version = "0.1.0"
description = "stock gap prediction AI model"
authors = ["kknakss <kknaks@stoa-investment.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.3.3"
numpy = "^2.4.0"
scikit-learn = "^1.8.0"
xgboost = "^3.1.2"
lightgbm = "^4.6.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.5.0"
python-dotenv = "^1.2.1"
pyyaml = "^6.0.3"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
sqlalchemy = "^2.0.36"
pymssql = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
